# Peripherals-Store---FastAPI-Grafo

./: calitech.db  main.py  populate_database.py  pyproject.toml  requirements.txt
app/: database.py  dtos.py  models.py
app/adapters/: instructor_adapter.py  jinja2_adapter.py  type_adapter.py
app/core/: factories.py
app/core/ports/: formatter_port.py  llm_port.py  type_port.py
app/core/services/: order_service.py  setup_service.py  stock_service.py  tag_service.py
app/core/use_cases/: sales_use.py  stock_use.py  tag_use.py
app/core/workflows/: intention.py  intention.yaml  intention_models.py
app/routers/: chat.py  sales.py  stock.py  tags.py
